Squashed 'ClientRuntimes/Java/' changes from 63803e0..4736d63
4736d63 Merge pull request #16 from jianghaolu/checkstyle
9b363b4 Making corresponding changes to gradle
122b780 Update travis to install build tools
62865c0 Move checkstyle to build-tools
eb8754b Add checkstyle to travis build
de698f7 Optional suppression file for maven scenario
55702f0 Merge commit 'bebdec5b1bbf8d0d2b6be78eb00cd2fc85646763' into checkstyle
0bcf347 Move checkstyle rules to runtimes
9071c8d Add checkstyle rules
7282bf8 Merge pull request #14 from jianghaolu/ua
13575b4 Pull runtimes subtree
b443c0f Fix styles and tests
aabe677 Merge commit 'fddca6a8917951772a65a3e5b47c5e72c1f42fb5' into ua

git-subtree-dir: ClientRuntimes/Java
git-subtree-split: 4736d6335db5a84896461e93f84f6ad78ef5bdc4

--- a/azure-client-authentication/build.gradle
+++ b/azure-client-authentication/build.gradle
@@ -13,14 +13,15 @@ apply plugin: 'checkstyle'
 version = '1.0.0-SNAPSHOT'
 
 checkstyle {
-    configFile = new File("$rootDir/Tools/checkstyle/checkstyle.xml")
-    configProperties = [samedir: "$rootDir/Tools/checkstyle"]
-    reportsDir = new File("$rootDir/Tools/checkstyle/reports")
+    toolVersion = "6.18"
+    configFile = new File("$rootDir/ClientRuntimes/Java/build-tools/src/main/resources/checkstyle.xml")
+    configProperties = [samedir: "$rootDir/ClientRuntimes/Java/build-tools/src/main/resources"]
+    reportsDir = new File("$rootDir/ClientRuntimes/Java/build-tools/reports")
 }
 
 dependencies {
     compile 'com.microsoft.azure:adal4j:1.1.2'
-    compile 'com.microsoft.azure:azure-client-runtime:1.0.0-beta1'
+    compile 'com.microsoft.azure:azure-client-runtime:1.0.0-SNAPSHOT'
     testCompile 'junit:junit:4.12'
     testCompile 'junit:junit-dep:4.11'
     deployerJars "org.apache.maven.wagon:wagon-ftp:2.10"
