--- a/Tools/references.net45.props
+++ b/Tools/references.net45.props
@@ -19,7 +19,7 @@
       <HintPath>$(CommonNugetPackageFolder)\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="YamlDotNet">
-      <HintPath>$(CommonNugetPackageFolder)\YamlDotNet.3.8.0\lib\dotnet\YamlDotNet.dll</HintPath>
+      <HintPath>$(CommonNugetPackageFolder)\YamlDotNet.Signed.3.8.0\lib\dotnet\YamlDotNet.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
