--- a/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime/project.json
+++ b/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "3.1.0",
+  "version": "3.0.1",
   "copyright": "Copyright (c) Microsoft Corporation",
   "title": "Client Runtime Library for Microsoft AutoRest Generated Clients",
   "description": "Infrastructure for error handling, tracing, and HttpClient pipeline configuration. Required by client libraries generated using AutoRest. \nSupported Platforms:\n  -   Portable Class Libraries\n  -   .NET Framework 4.5\n  -   Windows 8\n  -   Windows Phone 8.1\n  -   DotNet Core",
@@ -20,6 +20,10 @@
     "keyFile": "../../../Tools/MSSharedLibKey.snk"
   },
 
+  "dependencies": {
+    "Newtonsoft.Json": "8.0.3"
+  },
+
   "frameworks": {     
     "net45": {
       "frameworkAssemblies": {
@@ -31,16 +35,29 @@
         "System.Runtime.Serialization": "",
         "System.Xml": ""
       },
-      "dependencies": {
-        "Newtonsoft.Json": "8.0.3"
-      }
     },     
     "netstandard1.1": {
       "buildOptions": { "define": [ "PORTABLE" ] },
       "imports": ["dnxcore50", "portable-net45+win8"],
       "dependencies": {
-        "NETStandard.Library": "1.5.0-rc2-24027",
-        "Newtonsoft.Json": "8.0.3"
+        "Microsoft.NETCore.Platforms": "1.0.1-rc2-24027",
+        "Microsoft.NETCore.Runtime": "1.0.2-rc2-24027",
+        "System.Collections": "4.0.11-rc2-24027",
+        "System.Diagnostics.Debug": "4.0.11-rc2-24027",
+        "System.Diagnostics.Tools": "4.0.1-rc2-24027",
+        "System.Diagnostics.Tracing": "4.1.0-rc2-24027",
+        "System.Globalization": "4.0.11-rc2-24027",
+        "System.Linq": "4.1.0-rc2-24027",
+        "System.Linq.Expressions": "4.0.11-rc2-24027",
+        "System.Net.Http": "4.0.1-rc2-24027",
+        "System.Net.Primitives": "4.0.11-rc2-24027",
+        "System.ObjectModel": "4.0.12-rc2-24027",
+        "System.Reflection.Extensions": "4.0.1-rc2-24027",
+        "System.Resources.ResourceManager": "4.0.1-rc2-24027",
+        "System.Runtime.Extensions": "4.1.0-rc2-24027",
+        "System.Text.RegularExpressions": "4.0.12-rc2-24027",
+        "System.Threading": "4.0.11-rc2-24027",
+        "System.Xml.ReaderWriter": "4.0.11-rc2-24027",
       }
     },
     "netstandard1.5": {
@@ -50,34 +67,21 @@
         "Microsoft.NETCore.Platforms": "1.0.1-rc2-24027",
         "Microsoft.NETCore.Runtime": "1.0.2-rc2-24027",
         "System.Collections": "4.0.11-rc2-24027",
-        "System.Collections.Concurrent": "4.0.12-rc2-24027",
         "System.Diagnostics.Debug": "4.0.11-rc2-24027",
         "System.Diagnostics.Tools": "4.0.1-rc2-24027",
         "System.Diagnostics.Tracing": "4.1.0-rc2-24027",
         "System.Globalization": "4.0.11-rc2-24027",
-        "System.IO": "4.1.0-rc2-24027",
-        "System.IO.Compression": "4.1.0-rc2-24027",
         "System.Linq": "4.1.0-rc2-24027",
+        "System.Linq.Expressions": "4.0.11-rc2-24027",
         "System.Net.Http": "4.0.1-rc2-24027",
         "System.Net.Primitives": "4.0.11-rc2-24027",
         "System.ObjectModel": "4.0.12-rc2-24027",
-        "System.Reflection": "4.1.0-rc2-24027",
         "System.Reflection.Extensions": "4.0.1-rc2-24027",
-        "System.Reflection.Primitives": "4.0.1-rc2-24027",
         "System.Resources.ResourceManager": "4.0.1-rc2-24027",
-        "System.Runtime": "4.1.0-rc2-24027",
         "System.Runtime.Extensions": "4.1.0-rc2-24027",
-        "System.Runtime.InteropServices": "4.1.0-rc2-24027",
-        "System.Runtime.InteropServices.RuntimeInformation": "4.0.0-rc2-24027",
-        "System.Runtime.Numerics": "4.0.1-rc2-24027",
-        "System.Text.Encoding": "4.0.11-rc2-24027",
-        "System.Text.Encoding.Extensions": "4.0.11-rc2-24027",
         "System.Text.RegularExpressions": "4.0.12-rc2-24027",
         "System.Threading": "4.0.11-rc2-24027",
-        "System.Threading.Tasks": "4.0.11-rc2-24027",
         "System.Xml.ReaderWriter": "4.0.11-rc2-24027",
-        "System.Xml.XDocument": "4.0.11-rc2-24027",
-        "Newtonsoft.Json": "8.0.3"
       }
     }
   }
