--- a/ClientRuntimes/NodeJS/ms-rest-azure/package.json
+++ b/ClientRuntimes/NodeJS/ms-rest-azure/package.json
@@ -5,21 +5,19 @@
     "email": "azsdkteam@microsoft.com",
     "url": "https://github.com/Azure/AutoRest"
   },
-  "version": "1.14.2",
+  "version": "1.14.3",
   "description": "Client Runtime for Node.js Azure client libraries generated using AutoRest",
   "tags": [ "node", "microsoft", "autorest", "azure", "clientruntime" ],
   "keywords": [ "node", "microsoft", "autorest", "azure", "clientruntime" ],
   "main": "./lib/msRestAzure.js",
-  "engines": {
-    "node": ">= 0.10.0"
-  },
   "license": "MIT",
   "dependencies": {
     "async": "0.2.7",
     "uuid": "2.0.1",
     "adal-node": "^0.1.17",
-    "ms-rest": "^1.14.2",
-    "moment": "^2.6.0"
+    "ms-rest": "^1.14.3",
+    "moment": "^2.6.0",
+    "azure-arm-resource": "^1.4.4-preview"
   },
   "devDependencies": {
     "jshint": "2.6.3",
