Adding validation test to make sure missing definitions show a warning

--- a/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
+++ b/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Model\Tag.cs" />
     <Compile Include="Model\TransferProtocolScheme.cs" />
     <Compile Include="ValidationMessage.cs" />
+    <Compile Include="Validators\DefinitionsValidator.cs" />
     <Compile Include="Validators\ProducesValidator.cs" />
     <Compile Include="Validators\ConsumesValidator.cs" />
     <Compile Include="Validators\ServiceDefinitionValidator.cs" />
