Adding validators for Paths and subproperties

--- a/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
+++ b/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
@@ -72,7 +72,13 @@
     <Compile Include="Model\Tag.cs" />
     <Compile Include="Model\TransferProtocolScheme.cs" />
     <Compile Include="ValidationMessage.cs" />
+    <Compile Include="Validators\ResponseValidator.cs" />
+    <Compile Include="Validators\ResponsesValidator.cs" />
+    <Compile Include="Validators\ExternalDocsValidator.cs" />
+    <Compile Include="Validators\PathsValidator.cs" />
     <Compile Include="Validators\DefinitionsValidator.cs" />
+    <Compile Include="Validators\OperationsValidator.cs" />
+    <Compile Include="Validators\ParameterValidator.cs" />
     <Compile Include="Validators\ProducesValidator.cs" />
     <Compile Include="Validators\ConsumesValidator.cs" />
     <Compile Include="Validators\ServiceDefinitionValidator.cs" />
