Adding Constants file for exception ids and adding a helper method for logging validation exceptions

--- a/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
+++ b/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Model\Info.cs" />
     <Compile Include="Model\Tag.cs" />
     <Compile Include="Model\TransferProtocolScheme.cs" />
+    <Compile Include="ValidationExceptionConstants.cs" />
     <Compile Include="ValidationMessage.cs" />
     <Compile Include="Validators\ResponseValidator.cs" />
     <Compile Include="Validators\ResponsesValidator.cs" />
