Changing validation tests to use validation messages instead of inspecting logger

--- a/AutoRest/AutoRest.Core/AutoRest.Core.csproj
+++ b/AutoRest/AutoRest.Core/AutoRest.Core.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Logging\Logger.cs" />
     <Compile Include="Utilities\MemoryFileSystem.cs" />
     <Compile Include="Validation\IValidator.cs" />
+    <Compile Include="Validation\ValidationException.cs" />
     <Compile Include="Validation\ValidationMessage.cs" />
   </ItemGroup>
   <ItemGroup>
