Adding line numbers to output of validation errors. Adding JSONConverter to automatically add the line number information to the error

--- a/AutoRest/AutoRest.Core/AutoRest.Core.csproj
+++ b/AutoRest/AutoRest.Core/AutoRest.Core.csproj
@@ -39,12 +39,14 @@
     <Compile Include="ClientModel\PrimaryType.cs" />
     <Compile Include="ClientModel\ParameterLocation.cs" />
     <Compile Include="ClientModel\Constraint.cs" />
+    <Compile Include="JSONSourceContext.cs" />
     <Compile Include="NoopCodeGenerator.cs" />
     <Compile Include="CodeNamer.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Modeler.cs" />
     <Compile Include="SettingsAliasAttribute.cs" />
+    <Compile Include="SourceContext.cs" />
     <Compile Include="Template.cs" />
     <Compile Include="ClientModel\ServiceClient.cs" />
     <Compile Include="ClientModel\DictionaryType.cs" />
