--- a/AutoRest/Generators/Python/Microsoft.Rest.Generator.Python.Azure/project.json
+++ b/AutoRest/Generators/Python/Microsoft.Rest.Generator.Python.Azure/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.0.0",
+  "version": "1.0.0-preview-*",
   "authors": [ "Microsoft" ],
 
   "scripts": {
@@ -19,9 +19,10 @@
   },
 
   "dependencies": {
-    "Azure.Extensions": "2.0.0",
     "Newtonsoft.Json": "8.0.3",
-    "AutoRest.Core": "2.0.0",
-    "Python": "2.0.0"
+    
+    "Microsoft.Rest.Generator.Extensions.Azure" : "1.0.0-preview-*",
+    "Microsoft.Rest.Generator" : "1.0.0-preview-*",
+    "Microsoft.Rest.Generator.Python" : "1.0.0-preview-*"
   }
 }
