--- a/AutoRest/Microsoft.Rest.Generator/project.json
+++ b/AutoRest/Microsoft.Rest.Generator/project.json
@@ -1,6 +1,5 @@
 {
-  "name": "Microsoft.Rest.Generator",
-  "version": "2.0.0",
+  "version": "1.0.0-preview-*",
   "authors": [ "Microsoft" ],
 
   "packOptions": {
