--- a/AutoRest/Generators/CSharp/Microsoft.Rest.Generator.CSharp.Azure/project.json
+++ b/AutoRest/Generators/CSharp/Microsoft.Rest.Generator.CSharp.Azure/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.0.0",
+  "version": "1.0.0-preview-*",
   "authors": [ "Microsoft" ],
 
   "scripts": {
@@ -20,8 +20,8 @@
 
   "dependencies": {
     "Newtonsoft.Json": "8.0.3",
-    "AutoRest.Core": "2.0.0",
-    "CSharp": "2.0.0",
-    "Azure.Extensions": "2.0.0"
+    "Microsoft.Rest.Generator": "1.0.0-preview-*",
+    "Microsoft.Rest.Generator.CSharp": "1.0.0-preview-*",
+    "Microsoft.Rest.Generator.Extensions.Azure": "1.0.0-preview-*"
   }
 }
