--- a/AutoRest/Generators/CSharp/Microsoft.Rest.Generator.CSharp/project.json
+++ b/AutoRest/Generators/CSharp/Microsoft.Rest.Generator.CSharp/project.json
@@ -1,6 +1,6 @@
 {
   "name": "Microsoft.Rest.Generator.CSharp",
-  "version": "2.0.0",
+  "version": "1.0.0-preview-*",
   "authors": [ "Microsoft" ],
 
   "scripts": {
@@ -22,8 +22,10 @@
 
   "dependencies": {
     "System.Threading.Tasks": "4.0.0",
-    "Extensions": "2.0.0",
-    "AutoRest.Core": "2.0.0",
+    
+    "Microsoft.Rest.Generator.Extensions" : "1.0.0-preview-*",
+    "Microsoft.Rest.Generator" : "1.0.0-preview-*",
+    
     "Microsoft.AspNetCore.Razor": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final"
   }
