--- a/AutoRest/Generators/NodeJS/Microsoft.Rest.Generator.NodeJS/project.json
+++ b/AutoRest/Generators/NodeJS/Microsoft.Rest.Generator.NodeJS/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.0.0",
+  "version": "1.0.0-preview-*",
   "authors": [ "Microsoft" ],
 
   "scripts": {
@@ -19,7 +19,7 @@
   },
 
   "dependencies": {
-    "Extensions": "2.0.0",
-    "AutoRest.Core": "2.0.0"
+    "Microsoft.Rest.Generator.Extensions" : "1.0.0-preview-*",
+    "Microsoft.Rest.Generator" : "1.0.0-preview-*",
   }
 }
