--- a/AutoRest/Generators/Ruby/Microsoft.Rest.Generator.Ruby.Azure/project.json
+++ b/AutoRest/Generators/Ruby/Microsoft.Rest.Generator.Ruby.Azure/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.0.0",
+  "version": "1.0.0-preview-*",
   "authors": [ "Microsoft" ],
 
   "scripts": {
@@ -20,8 +20,9 @@
 
   "dependencies": {
     "System.Threading.Tasks": "4.0.0",
-    "AutoRest.Core": "2.0.0",
-    "Azure.Extensions": "2.0.0",
-    "Ruby": "2.0.0"
+    
+    "Microsoft.Rest.Generator" : "1.0.0-preview-*",
+    "Microsoft.Rest.Generator.Extensions.Azure" : "1.0.0-preview-*",
+    "Microsoft.Rest.Generator.Ruby" : "1.0.0-preview-*"
   }
 }
