--- a/AutoRest/Microsoft.Rest.Generator.Cli/project.json
+++ b/AutoRest/Microsoft.Rest.Generator.Cli/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.0.0",
+  "version": "1.0.0-preview-*",
   "authors": [ "Microsoft" ],
 
   "packOptions": {
@@ -17,6 +17,6 @@
   "dependencies": {
     "Newtonsoft.Json": "8.0.3",
     "System.Threading.Tasks" : "4.0.0",
-    "AutoRest.Core": "2.0.0"
+    "Microsoft.Rest.Generator" : "1.0.0-preview-*"
   }
 }
