--- a/AutoRest/Modelers/Microsoft.Rest.Modeler.CompositeSwagger/project.json
+++ b/AutoRest/Modelers/Microsoft.Rest.Modeler.CompositeSwagger/project.json
@@ -1,6 +1,6 @@
 {
   "name": "Microsoft.Rest.Modeler.CompositeSwagger",
-  "version": "2.0.0",
+  "version": "1.0.0-preview-*",
   "authors": [ "Microsoft" ],
 
   "packOptions": {
@@ -18,7 +18,8 @@
   "dependencies": {
     "Newtonsoft.Json": "8.0.3",
     "System.Threading.Tasks": "4.0.0",
-    "AutoRest.Core": "2.0.0",
-    "Swagger": "2.0.0"
+    
+    "Microsoft.Rest.Generator" : "1.0.0-preview-*",
+    "Microsoft.Rest.Modeler.Swagger" : "1.0.0-preview-*"
   }
 }
