--- a/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime/project.json
+++ b/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime/project.json
@@ -11,7 +11,7 @@
     "projectUrl": "https://github.com/Azure/AutoRest",
     "licenseUrl": "https://raw.githubusercontent.com/Microsoft/dotnet/master/LICENSE",
     "tags": [ "Microsoft AutoRest ClientRuntime REST" ],
-    "requireLicenseAcceptance":  true,
+    "requireLicenseAcceptance":  true
   },
 
   "buildOptions": {
@@ -33,7 +33,7 @@
       },
 	  "dependencies": {
 	    "Newtonsoft.Json": "6.0.8"
-	  },
+	  }
     },     
     "netstandard1.1": {
       "buildOptions": { "define": [ "PORTABLE" ] },
@@ -57,7 +57,7 @@
         "System.Runtime.Extensions": "4.1.0-rc2-24027",
         "System.Text.RegularExpressions": "4.0.12-rc2-24027",
         "System.Threading": "4.0.11-rc2-24027",
-        "System.Xml.ReaderWriter": "4.0.11-rc2-24027",
+        "System.Xml.ReaderWriter": "4.0.11-rc2-24027"
       }
     },
     "netstandard1.5": {
@@ -82,7 +82,7 @@
         "System.Runtime.Extensions": "4.1.0-rc2-24027",
         "System.Text.RegularExpressions": "4.0.12-rc2-24027",
         "System.Threading": "4.0.11-rc2-24027",
-        "System.Xml.ReaderWriter": "4.0.11-rc2-24027",
+        "System.Xml.ReaderWriter": "4.0.11-rc2-24027"
       }
     }
   }
