Updated project.json files and xproj files

--- a/AutoRest/Generators/AzureResourceSchema/Microsoft.Rest.Generator.AzureResourceSchema/project.json
+++ b/AutoRest/Generators/AzureResourceSchema/Microsoft.Rest.Generator.AzureResourceSchema/project.json
@@ -16,6 +16,8 @@
 
   "dependencies": {
     "Newtonsoft.Json": "8.0.3",
-    "Microsoft.Rest.Generator" : "1.0.0-preview-*"
+    "Microsoft.Rest.Generator": {
+      "target": "project"
+    }
   }
 }
