--- a/AutoRest/Generators/NodeJS/Microsoft.Rest.Generator.NodeJS/project.json
+++ b/AutoRest/Generators/NodeJS/Microsoft.Rest.Generator.NodeJS/project.json
@@ -19,7 +19,11 @@
   },
 
   "dependencies": {
-    "Microsoft.Rest.Generator.Extensions" : "1.0.0-preview-*",
-    "Microsoft.Rest.Generator" : "1.0.0-preview-*",
+    "Microsoft.Rest.Generator.Extensions": {
+      "target": "project"
+    },
+    "Microsoft.Rest.Generator": {
+      "target": "project"
+    }
   }
 }
