--- a/AutoRest/Modelers/Microsoft.Rest.Modeler.CompositeSwagger/project.json
+++ b/AutoRest/Modelers/Microsoft.Rest.Modeler.CompositeSwagger/project.json
@@ -18,8 +18,12 @@
   "dependencies": {
     "Newtonsoft.Json": "8.0.3",
     "System.Threading.Tasks": "4.0.0",
-    
-    "Microsoft.Rest.Generator" : "1.0.0-preview-*",
-    "Microsoft.Rest.Modeler.Swagger" : "1.0.0-preview-*"
+
+    "Microsoft.Rest.Generator": {
+      "target": "project"
+    },
+    "Microsoft.Rest.Modeler.Swagger": {
+      "target": "project"
+    }
   }
 }
