--- a/AutoRest/Modelers/Microsoft.Rest.Modeler.Swagger/project.json
+++ b/AutoRest/Modelers/Microsoft.Rest.Modeler.Swagger/project.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "Newtonsoft.Json": "8.0.3",
     "System.Threading.Tasks": "4.0.0",
-    "Microsoft.Rest.Generator" : "1.0.0-preview-*"
+    "Microsoft.Rest.Generator": {
+      "target": "project"
+    }
   }
 }
