--- a/AutoRest/Generators/CSharp/Microsoft.Rest.Generator.CSharp.Azure/project.json
+++ b/AutoRest/Generators/CSharp/Microsoft.Rest.Generator.CSharp.Azure/project.json
@@ -20,8 +20,14 @@
 
   "dependencies": {
     "Newtonsoft.Json": "8.0.3",
-    "Microsoft.Rest.Generator": "1.0.0-preview-*",
-    "Microsoft.Rest.Generator.CSharp": "1.0.0-preview-*",
-    "Microsoft.Rest.Generator.Extensions.Azure": "1.0.0-preview-*"
+    "Microsoft.Rest.Generator": {
+      "target": "project"
+    },
+    "Microsoft.Rest.Generator.CSharp": {
+      "target": "project"
+    },
+    "Microsoft.Rest.Generator.Extensions.Azure": {
+      "target": "project"
+    }
   }
 }
