--- a/AutoRest/Generators/CSharp/Microsoft.Rest.Generator.CSharp/project.json
+++ b/AutoRest/Generators/CSharp/Microsoft.Rest.Generator.CSharp/project.json
@@ -22,9 +22,13 @@
 
   "dependencies": {
     "System.Threading.Tasks": "4.0.0",
-    
-    "Microsoft.Rest.Generator.Extensions" : "1.0.0-preview-*",
-    "Microsoft.Rest.Generator" : "1.0.0-preview-*",
+
+    "Microsoft.Rest.Generator.Extensions": {
+      "target": "project"
+    },
+    "Microsoft.Rest.Generator": {
+      "target": "project"
+    },
     
     "Microsoft.AspNetCore.Razor": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final"
