--- a/AutoRest/Generators/Extensions/Microsoft.Rest.Generator.Extensions.Azure/project.json
+++ b/AutoRest/Generators/Extensions/Microsoft.Rest.Generator.Extensions.Azure/project.json
@@ -16,8 +16,14 @@
 
   "dependencies": {
     "System.Threading.Tasks": "4.0.0",
-    "Microsoft.Rest.Generator" : "1.0.0-preview-*",
-    "Microsoft.Rest.Modeler.Swagger" : "1.0.0-preview-*",
-    "Microsoft.Rest.Generator.Extensions" : "1.0.0-preview-*"
+    "Microsoft.Rest.Generator": {
+      "target": "project"
+    },
+    "Microsoft.Rest.Modeler.Swagger": {
+      "target": "project"
+    },
+    "Microsoft.Rest.Generator.Extensions": {
+      "target": "project"
+    }
   }
 }
