--- a/AutoRest/Generators/Extensions/Microsoft.Rest.Generator.Extensions/project.json
+++ b/AutoRest/Generators/Extensions/Microsoft.Rest.Generator.Extensions/project.json
@@ -16,7 +16,11 @@
 
   "dependencies": {
     "System.Threading.Tasks" : "4.0.0",
-    "Microsoft.Rest.Modeler.Swagger" : "1.0.0-preview-*",
-    "Microsoft.Rest.Generator" : "1.0.0-preview-*"
+    "Microsoft.Rest.Modeler.Swagger": {
+      "target": "project"
+    },
+    "Microsoft.Rest.Generator": {
+      "target": "project"
+    }
   }
 }
