--- a/AutoRest/Generators/Java/Microsoft.Rest.Generator.Java.Azure/project.json
+++ b/AutoRest/Generators/Java/Microsoft.Rest.Generator.Java.Azure/project.json
@@ -20,8 +20,14 @@
 
   "dependencies": {
     "Newtonsoft.Json": "8.0.3",
-    "Microsoft.Rest.Generator" : "1.0.0-preview-*",
-    "Microsoft.Rest.Generator.Java" : "1.0.0-preview-*",
-    "Microsoft.Rest.Generator.Extensions.Azure" : "1.0.0-preview-*"
+    "Microsoft.Rest.Generator": {
+      "target": "project"
+    },
+    "Microsoft.Rest.Generator.Java": {
+      "target": "project"
+    },
+    "Microsoft.Rest.Generator.Extensions.Azure": {
+      "target": "project"
+    }
   }
 }
