--- a/AutoRest/Generators/NodeJS/Microsoft.Rest.Generator.NodeJS.Azure/project.json
+++ b/AutoRest/Generators/NodeJS/Microsoft.Rest.Generator.NodeJS.Azure/project.json
@@ -20,9 +20,15 @@
 
   "dependencies": {
     "Newtonsoft.Json": "8.0.3",
-    "Microsoft.Rest.Generator" : "1.0.0-preview-*",
-    "Microsoft.Rest.Generator.NodeJS" : "1.0.0-preview-*",
-    
-    "Microsoft.Rest.Generator.Extensions.Azure" : "1.0.0-preview-*"
+    "Microsoft.Rest.Generator": {
+      "target": "project"
+    },
+    "Microsoft.Rest.Generator.NodeJS": {
+      "target": "project"
+    },
+
+    "Microsoft.Rest.Generator.Extensions.Azure": {
+      "target": "project"
+    }
   }
 }
