--- a/AutoRest/Generators/Ruby/Microsoft.Rest.Generator.Ruby.Azure/project.json
+++ b/AutoRest/Generators/Ruby/Microsoft.Rest.Generator.Ruby.Azure/project.json
@@ -20,9 +20,15 @@
 
   "dependencies": {
     "System.Threading.Tasks": "4.0.0",
-    
-    "Microsoft.Rest.Generator" : "1.0.0-preview-*",
-    "Microsoft.Rest.Generator.Extensions.Azure" : "1.0.0-preview-*",
-    "Microsoft.Rest.Generator.Ruby" : "1.0.0-preview-*"
+
+    "Microsoft.Rest.Generator": {
+      "target": "project"
+    },
+    "Microsoft.Rest.Generator.Extensions.Azure": {
+      "target": "project"
+    },
+    "Microsoft.Rest.Generator.Ruby": {
+      "target": "project"
+    }
   }
 }
