--- a/AutoRest/Generators/Ruby/Microsoft.Rest.Generator.Ruby/project.json
+++ b/AutoRest/Generators/Ruby/Microsoft.Rest.Generator.Ruby/project.json
@@ -20,8 +20,12 @@
 
   "dependencies": {
     "System.Threading.Tasks": "4.0.0",
-    
-    "Microsoft.Rest.Generator.Extensions" : "1.0.0-preview-*",
-    "Microsoft.Rest.Generator" : "1.0.0-preview-*"
+
+    "Microsoft.Rest.Generator.Extensions": {
+      "target": "project"
+    },
+    "Microsoft.Rest.Generator": {
+      "target": "project"
+    }
   }
 }
