--- a/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime.Azure.Authentication/project.json
+++ b/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime.Azure.Authentication/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.2.0-preview",
+  "version": "2.1.0-preview",
   "title": "Authentication for Azure Management Clients",
   "description": "Provides ADAL based authentication for Azure management client libraries \nSupported Platforms:\n  -   Portable Class Libraries\n  -   .NET Framework 4.5\n  -   Windows 8\n  -   Windows Phone 8.1\n  -   DotNet Core",
   "authors": [ "Microsoft" ],
@@ -21,13 +21,13 @@
   },
 
   "dependencies": {
-    "Microsoft.Rest.ClientRuntime": "[2.3.0,3.0)"
+    "Microsoft.Rest.ClientRuntime": "[3.0.0,4.0)"
   },
 
   "frameworks": {
     "net45": {
       "dependencies": {
-        "Microsoft.IdentityModel.Clients.ActiveDirectory": "2.26.305102204"
+        "Microsoft.IdentityModel.Clients.ActiveDirectory": "[2.18.0,3.0)"
       }
     },    
     "netstandard1.1": {
