Adding rule for requiring a description property for a swagger object

--- a/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
+++ b/AutoRest/Modelers/Swagger/AutoRest.Modeler.Swagger.csproj
@@ -74,6 +74,9 @@
     <Compile Include="Model\Tag.cs" />
     <Compile Include="Model\TransferProtocolScheme.cs" />
     <Compile Include="ValidationExceptionConstants.cs" />
+    <Compile Include="Validators\DescriptionRequiredAttribute.cs" />
+    <Compile Include="Validators\NestedObjectValidator.cs" />
+    <Compile Include="Validators\RequiredAttribute.cs" />
     <Compile Include="Validators\ResponseValidator.cs" />
     <Compile Include="Validators\ResponsesValidator.cs" />
     <Compile Include="Validators\ExternalDocsValidator.cs" />
